[tool.poetry]
name = "rl-gym"
version = "0.1.0"
description = "RL experiments with Stable Baselines3 and Gymnasium"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
stable-baselines3 = {version = ">=2.3.0", extras = ["extra"]}  # includes tqdm, rich for progress bar
gymnasium = {version = ">=1.0.0", extras = ["box2d"]}
numpy = ">=1.26.0,<3.0"
torch = ">=2.3.0"
click = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.9.0"
ruff = "^0.15.12"

[tool.mypy]
python_version = "3.13"
strict = true
# SB3, gymnasium, numpy, and matplotlib don't ship complete type stubs —
# ignore missing imports rather than failing on third-party libs
ignore_missing_imports = true
# Allow Any in a few places where SB3/gymnasium interfaces require it
warn_return_any = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
